# val_moveit_planner

./: CMakeLists.txt  README.md  package.xml
cfg/: IMPlanningRequestParams.cfg
launch/: arm_goal_interactive_marker_node.launch  moveit_collision_detector.launch  moveit_filter_joint_states_node.launch  moveit_planner_executor_server_node.launch  val_moveit_utils.launch
msg/: ModifyAllowedCollision.msg
nodes/: CMakeLists.txt  arm_goal_interactive_marker_node.py  filter_joint_states_node.cpp  filter_joint_states_node.h  moveit_filter_joint_states_node.cpp  moveit_filter_joint_states_node.h  moveit_planner_executor_server_node.cpp  moveit_planner_executor_server_node.h  moveit_planner_executor_server_node_OLD_VERSION.cpp  moveit_planner_executor_server_node_OLD_VERSION.h  moveit_planning_scene_collision_detector.cpp  moveit_planning_scene_collision_detector.h
scripts/: example_ihmc_trajectory.txt  example_moveit_trajectory.txt  test_execute_stored_trajectory_service.sh  test_plan_left_arm_goal_service.sh  test_plan_right_arm_goal_service.sh
scripts/example_service_outputs/: example_ihmc_trajectory_rviz.txt  example_ihmc_trajectory_scs.txt  example_moveit_trajectory_rviz.txt  example_moveit_trajectory_scs.txt
scripts/robot_tests/: test_plan_left_arm_bigger_goal_service.sh  test_plan_left_arm_goal_service.sh  test_plan_left_arm_medium_goal_service.sh  test_plan_right_arm_goal_service.sh  test_plan_right_arm_medium_goal_service.sh
scripts/rviz_tests/: test_plan_left_waypoints_service.sh  test_plan_right_arm_goal_service.sh
scripts/small_tests/: test_plan_left_arm_small_goal_service.sh
srv/: CMakeLists.txt  ExecuteToArmGoal.srv  ModifyAllowedPlanningSceneCollisions.srv  PlanToArmGoal.srv  PlanToArmWaypoints.srv
