<?xml version="1.0"?>
<package format="2">
  <name>val_moveit_planner_executor</name>
  <version>0.0.0</version>
  <description>Package for providing services related to planning and executing MoveIt trajectories on NASA's Valkyrie robot.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>val_safety_exception_reporter</depend>
</package>
